# usbarmory.rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  dev-dependencies.ssv  dev-dependencies.txt
.cargo/: config
.github/workflows/: rust.yml  security_audit.yml
common/: Cargo.toml  README.md
common/c-stubs/src/: lib.rs
common/consts/: Cargo.toml
common/consts/src/: lib.rs
common/littlefs/: Cargo.toml
common/littlefs/examples/: dir-close.rs  dir-forget-2.rs  dir-forget.rs  file-close.rs  file-forget.rs
common/littlefs/src/: consts.rs  fs.rs  io.rs  lib.rs  mem.rs  path.rs  storage.rs
firmware/: Cargo.toml  README.md  armv7-none-eabi.json  armv7-none-eabihf.json
firmware/.cargo/: config
firmware/cortex-a/: Cargo.toml  README.md  asm.s  assemble.sh
firmware/cortex-a-rtfm/: Cargo.toml  README.md
firmware/cortex-a-rtfm/macros/: Cargo.toml
firmware/cortex-a-rtfm/macros/src/: codegen.rs  lib.rs
firmware/cortex-a-rtfm/macros/src/codegen/: assertions.rs  dispatchers.rs  hardware_tasks.rs  idle.rs  init.rs  module.rs  post_init.rs  pre_init.rs  resources_struct.rs  software_tasks.rs  spawn.rs  spawn_body.rs  util.rs
firmware/cortex-a-rtfm/src/: export.rs  lib.rs
firmware/cortex-a-rtic/: README.md
firmware/cortex-a-rtic/macros/src/: check.rs
firmware/cortex-a-rtic/macros/src/codegen/: assertions.rs  hardware_tasks.rs  post_init.rs  resources.rs  resources_struct.rs  software_tasks.rs  spawn_body.rs  util.rs
firmware/cortex-a-rtic/src/: lib.rs
firmware/cortex-a/src/: lib.rs  register.rs
firmware/cortex-a/src/register/: cpsr.rs  scr.rs  sctlr.rs
firmware/cortex-m-rtic/: Cargo.toml  README.md
firmware/cortex-m-rtic/macros/: Cargo.toml
firmware/cortex-m-rtic/macros/src/: check.rs  codegen.rs  lib.rs
firmware/cortex-m-rtic/macros/src/codegen/: dispatchers.rs  hardware_tasks.rs  idle.rs  init.rs  locals.rs  module.rs  pre_init.rs  resources.rs  spawn.rs  util.rs
firmware/cortex-m-rtic/src/: export.rs
firmware/examples/: Cargo.toml
firmware/examples/FIXME/: qemu-hello.rs
firmware/examples/examples/: abort.rs  aes-dual.rs  aes-otp.rs  aes-ram.rs  aes-unique.rs  blinky.rs  emmc-fs-format.rs  emmc-fs-read-dir.rs  emmc-fs-transaction-err.rs  emmc-fs-transaction.rs  emmc-fs.rs  emmc-fs2.rs  emmc-fs3.rs  emmc-fs4.rs  emmc-fs5.rs  emmc-mbr.rs  emmc-new-mbr.rs  emmc-wfr.rs  emmc.rs  fpu.rs  hello.rs  instant.rs  leds.rs  memlog.rs  panic.rs  perf.rs  rng.rs  rtfm-10-fs.rs  rtfm-5-message.rs  rtic-1-hello.rs  rtic-2-spawn.rs  rtic-3-lock.rs  rtic-4-late.rs  rtic-5-message.rs  rtic-6-locals.rs  rtic-7-evented.rs  rtic-8-usb.rs  rtic-9-cs.rs  sgis.rs  sha256.rs  (+7 more)
firmware/exception-reset/: Cargo.toml
firmware/exception-reset/src/: lib.rs
firmware/imx6ul-pac/: Cargo.toml  README.md
firmware/imx6ul-pac/src/: lib.rs
firmware/imx6ul-rac/: Cargo.toml
firmware/imx6ul-rac/src/: gic.rs  gpio.rs  lib.rs  src.rs  uart.rs  wdog.rs
firmware/imx6ul-rac/src/gic/: gicc.rs  gicd.rs
firmware/memlog/: Cargo.toml
firmware/memlog/src/: lib.rs
firmware/panic-serial/: Cargo.toml
firmware/panic-serial/src/: lib.rs
firmware/usbarmory/: Cargo.toml  README.md
firmware/usbarmory-rt/: Cargo.toml  README.md  asm-common.s  asm-dram.s  asm-no-vfp.s  asm-ocram.s  asm-vfp.s  asm.s  assemble.sh  build.rs  interrupts.txt  link-dram.x  link-ocram.x  link.x
firmware/usbarmory-rt/src/: i2c.rs  leds.rs  lib.rs  rtc.rs  serial.rs
firmware/usbarmory/.cargo/: config
firmware/usbarmory/examples/: abort.rs  aes-dual.rs  aes-otp.rs  aes-ram.rs  aes-unique.rs  blinky.rs  emmc-fs-format.rs  emmc-fs.rs  emmc-mbr.rs  emmc-new-mbr.rs  emmc-tfs.rs  emmc-wfr.rs  emmc.rs  fpu.rs  hello.rs  instant.rs  interrupts.rs  leds.rs  memlog.rs  panic.rs  qemu-hello.rs  rng.rs  rtc.rs  rtfm-1-hello.rs  rtfm-2-spawn.rs  rtfm-3-lock.rs  rtfm-4-late.rs  rtfm-5-message.rs  rtfm-6-locals.rs  rtfm-7-evented.rs  rtfm-8-usb.rs  rtfm-9-cs.rs  sgis.rs  sha256.rs  spi.rs  stack-overflow.rs  statics.rs  timebox.rs  timeout.rs  usb-enumerate.rs
firmware/usbarmory/src/: dcp.rs  emmc.rs  fs.rs  led.rs  lib.rs  macros.rs  rng.rs  rtc.rs  serial.rs  storage.rs  time.rs  usbd.rs  util.rs
firmware/usbarmory/src/dcp/: aes128.rs  sha256.rs
firmware/usbarmory/src/emmc/: card.rs  cmd.rs
firmware/usbarmory/src/fs/: transactional.rs
firmware/usbarmory/src/usbd/: bus.rs  dqh.rs  dtd.rs  token.rs  util.rs
host/: .gitignore  Cargo.toml  README.md
host/image/: Cargo.toml
host/image/src/: dcd.rs  ivt.rs  lib.rs  read.rs  write.rs
host/runner/: Cargo.toml
host/runner/src/: main.rs
host/runner2/: Cargo.toml
host/runner2/src/: hid.rs  lib.rs  main.rs  sdp.rs
host/txt2rust/: .gitignore  Cargo.toml  README.md  generate.sh
host/txt2rust/src/: codegen.rs  compress.rs  gic.rs  main.rs  parse.rs
host/usbc/: Cargo.toml
host/usbc/src/: main.rs
host/usd/: Cargo.toml
host/usd/src/: lib.rs  util.rs
host/usd/src/hid/: hidapi.rs  rusb.rs
tools/txt2rust/: test.sh
tools/txt2rust/src/: codegen.rs  compress.rs  main.rs  parse.rs
usbarmory/: Cargo.toml  README.md
usbarmory/src/: lib.rs
