[workspace]
members = [
  "cortex-a",
  "cortex-a-rtfm",
  "exception-reset",
  "imx6ul-pac",
  "memlog",
  "panic-serial",
  "usbarmory",
  "usbarmory-rt",
]

[profile.release]
lto = true
codegen-units = 1

# compile `syn` and other procedural macro dependencies without optimizations.
# This significantly improves 'from scratch' build times (75% reduction)
[profile.release.build-override]
codegen-units = 16
debug = false
opt-level = 0