[package]
name        = "usbarmory"
description = "Board support package for USB armory mkII devices from F-Secure"
version     = "0.0.0" # Also update html_root_url in lib.rs when bumping this
authors     = ["iqlusion"]
license     = "Apache-2.0 OR MIT"
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/usbarmory.rs/"
repository  = "https://github.com/iqlusioninc/usbarmory.rs/tree/develop/usbarmory"
readme      = "README.md"
categories  = ["embedded", "hardware-support", "no-std"]
keywords    = ["arm", "cortex-a"]

[dependencies]
