[package]
authors = ["iqlusion"]
edition = "2018"
license = "Apache-2.0 OR MIT"
name = "littlefs"
version = "0.0.0"

[dependencies]
bitflags = "1.2.1"
c-stubs = { path = "../c-stubs" }
cty = "0.2.1"
generic-array = "0.13.2"
heapless = "0.5.4"
ll = { version = "0.1.4", package = "littlefs2-sys" }

[dependencies.ascii]
default-features = false
version = "1.0.0"

[dependencies.cstr_core]
default-features = false
# HACK TL;DR :sadface: we are using an older version here to avoid
# rust-lang/cargo#4361 which has been fixed in nightly but lives behind a
# unstable flag as of Rust 1.42.0
#
# longer explanation: this crate depends on bindgen (build dependency) and
# bindgen depends on `memchr` "2" with default features enabled, which include a
# "std" feature that makes the crate depend on `std`. `cstr_core` ">0.1.1" and
# "0.2" also depend on "memchr" but with default features disabled. As this
# crate depends on both it ends up enabling the "std" of the `memchr` crate
# (that's the bug because that shouldn't happen).
#
# To avoid `bindgen` enabling the "std" dependency of `memchr` "2" we use an
# older version of `cstr_core` that depends on version of "1" of `memchr`. This
# way the bug won't enable the "std" of `memchr` "1" (because `memchr` "1" and
# `memchr` "2" are considered different crates)
version = "=0.1.0"

[features]
unsafe-x86 = []