[package]
authors = ["iqlusion"]
edition = "2018"
license = "Apache-2.0 OR MIT"
name    = "cortex-a-rtfm"
version = "0.0.0"

[lib]
name = "rtfm"

[dependencies]
cortex-a = { path = "../cortex-a" }
cortex-a-rtfm-macros = { path = "macros" }
heapless = "0.5.1"
rac = { package = "imx6ul-rac",  path = "../imx6ul-rac" }
rtfm-core = "0.3.0"
usbarmory-rt = { path = "../usbarmory-rt" }
