[package]
authors = ["iqlusion"]
edition = "2018"
name    = "usbarmory-rt"
version = "0.0.0"
license = "Apache-2.0 OR MIT"

[dependencies]
cortex-a = { path = "../cortex-a" }
r0 = "1.0.0"

[dependencies.pac]
package = "imx6ul-pac"
path = "../imx6ul-pac"
features = ["ccm", "gicc", "gpio", "i2c", "iomuxc", "snvs_hp", "uart"]

[build-dependencies]
quote = "1.0.2"
