[package]
authors = ["iqlusion"]
edition = "2018"
name    = "usbarmory-rt"
version = "0.0.0"
license = "Apache-2.0 OR MIT"

[dependencies]
cortex-a = { path = "../cortex-a" }
r0 = "1.0.0"

[dependencies.pac]
package = "imx6ul-pac"
path = "../imx6ul-pac"
features = ["ccm", "gicc", "gpio", "i2c", "iomuxc", "snvs_hp", "uart"]

[build-dependencies]
quote = "1.0.2"

[features]
# put most of the program (.text and .rodata) in DDR RAM (512 MB)
dram = []

# put the whole program in OCRAM (128 KB)
ocram = []