[package]
name        = "usbarmory"
description = "Board support package for USB armory mkII devices from F-Secure"
version     = "0.0.0" # Also update html_root_url in lib.rs when bumping this
authors     = ["iqlusion"]
license     = "Apache-2.0 OR MIT"
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/usbarmory.rs/"
repository  = "https://github.com/iqlusioninc/usbarmory.rs/tree/develop/usbarmory"
readme      = "README.md"
categories  = ["embedded", "hardware-support", "no-std"]
keywords    = ["arm", "cortex-a"]

[dependencies]
arrayref = "0.3.6"
block-cipher-trait = "0.6.2"
consts = { path = "../../common/consts" }
cortex-a = { path = "../cortex-a" }
heapless = "0.5.3"
memlog = { path = "../memlog" }
pac = { package = "imx6ul-pac", path = "../imx6ul-pac" }
rand_core = "0.5.1"
typenum = "1.11.2"
usb-device = "0.2.5"

[dependencies.usbarmory-rt]
path = "../usbarmory-rt"
## enable this feature to place .text and .rodata in DRAM
# features = ["use-dram"]

[dev-dependencies]
as-slice = "0.1.3"
cortex-a-rtfm = { path = "../cortex-a-rtfm" }
cortex-m-semihosting = { git = "https://github.com/japaric/cortex-m-semihosting", branch = "cortex-a" }
exception-reset = { path = "../exception-reset" }
heapless = "0.5.3"
panic-serial = { path = "../panic-serial" }
