[package]
name        = "usbarmory"
description = "Board support package for USB armory mkII devices from F-Secure"
version     = "0.0.0" # Also update html_root_url in lib.rs when bumping this
authors     = ["iqlusion"]
license     = "Apache-2.0 OR MIT"
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/usbarmory.rs/"
repository  = "https://github.com/iqlusioninc/usbarmory.rs/tree/develop/usbarmory"
readme      = "README.md"
categories  = ["embedded", "hardware-support", "no-std"]
keywords    = ["arm", "cortex-a"]

[[example]]
name = "emmc-fs"
required-features = ["fs"]

[[example]]
name = "emmc-fs2"
required-features = ["fs"]

[[example]]
name = "emmc-fs3"
required-features = ["fs"]

[[example]]
name = "emmc-fs4"
required-features = ["fs"]

[[example]]
name = "emmc-tfs"
required-features = ["fs"]

[[example]]
name = "emmc-fs-format"
required-features = ["fs"]

[dependencies]
arrayref = "0.3.6"
block-cipher-trait = "0.6.2"
c-stubs = { path = "../../common/c-stubs" }
consts = { path = "../../common/consts" }
cortex-a = { path = "../cortex-a" }
digest = "0.8.1"
generic-array = "0.13.2"
heapless = "0.5.3"
memlog = { path = "../memlog" }
rand_core = "0.5.1"
typenum = "1.11.2"
usb-device = "0.2.5"
zerocopy = "0.3.0"

[dependencies.littlefs2]
optional = true
version = "0.1.0-alpha.0"

[dependencies.pac]
features = ["ccm_analog", "hw_dcp", "rng", "src", "uart", "usb_analog", "usb_uog", "usbphy", "usdhc", "wdog"]
package = "imx6ul-pac"
path = "../imx6ul-pac"

[dependencies.usbarmory-rt]
path = "../usbarmory-rt"
## choose the location of the .text and .rodata sections -- pick only one line
features = ["dram"]
# features = ["ocram"]

[dev-dependencies]
as-slice = "0.1.3"
cortex-a-rtfm = { path = "../cortex-a-rtfm" }
cortex-m-semihosting = { git = "https://github.com/japaric/cortex-m-semihosting", branch = "cortex-a" }
exception-reset = { path = "../exception-reset" }
heapless = "0.5.3"
panic-serial = { path = "../panic-serial" }

[features]
fs = ["littlefs2"]
