[package]
name        = "usbarmory"
description = "Board support package for USB armory mkII devices from F-Secure"
version     = "0.0.0" # Also update html_root_url in lib.rs when bumping this
authors     = ["iqlusion"]
license     = "Apache-2.0 OR MIT"
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/usbarmory.rs/"
repository  = "https://github.com/iqlusioninc/usbarmory.rs/tree/develop/usbarmory"
readme      = "README.md"
categories  = ["embedded", "hardware-support", "no-std"]
keywords    = ["arm", "cortex-a"]

[dependencies]
arrayref = "0.3.6"
block-cipher-trait = "0.6.2"
consts = { path = "../../common/consts" }
c-stubs = { path = "../../common/c-stubs" }
cortex-a = { path = "../cortex-a" }
digest = "0.8.1"
heapless = "0.5.3"
memlog = { path = "../memlog" }
rand_core = "0.5.1"
typenum = "1.11.2"
usb-device = "0.2.5"
zerocopy = "0.3.0"

[dependencies.littlefs2]
optional = true
version = "0.1.0-alpha.0"

[dependencies.pac]
features = ["ccm_analog", "hw_dcp", "rng", "src", "uart", "usb_analog", "usb_uog", "usbphy", "usdhc", "wdog"]
package = "imx6ul-pac"
path = "../imx6ul-pac"

[dependencies.usbarmory-rt]
path = "../usbarmory-rt"

[features]
fs = ["littlefs2"]
# choose the location of the .text and .rodata sections -- pick only one feature
dram = ["usbarmory-rt/dram"]
ocram = ["usbarmory-rt/ocram"]