[package]
authors = ["iqlusion"]
edition = "2018"
license = "Apache-2.0 OR MIT"
name    = "runner2"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1.0.27"
arrayref = "0.3.6"
rusb = "0.5.5"
xmas-elf = "0.7.0"
serialport = { version = "3.3.0", default-features = false }
image = { path = "../image" }
tempfile = "3.1.0"
hidapi = "1.2.1"
