[package]
authors = ["iqlusion"]
edition = "2018"
license = "Apache-2.0 OR MIT"
name    = "usd"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1.0.27"
arrayref = "0.3.6"
image = { path = "../image" }
rusb = "0.5.5"
serialport = { version = "3.3.0" }
xmas-elf = "0.7.0"

[dependencies.hidapi]
optional = true
version = "1.2.1"

[features]
default = ["hidapi"]
# alternative HID backend -- disable `hidapi' if you plan to use this one
rusb-hid = []